Revision history for {{$dist->name}}

{{$NEXT}}

0.021     2013-09-07 19:41:06Z (Karen Etheridge)
          - disable invocation of cpanm-reporter (see RT#88367)
          - added [MojibakeTests], for testing file encoding at release time

0.020     2013-09-02 23:50:35Z (Karen Etheridge)
          - set new die_on_existing_version option in [PkgVersion]
          - after releasing and we install the dist, submit a cpantesters
            report

0.019     2013-08-21 19:16:27Z (Karen Etheridge)
          - now supporting dists hosted elsewhere than github (currently
            gitmo, p5sagit, or other), via the 'server' option
          - Test::Version now runs in strict mode
          - generated clean-namespaces.t test now skips ::Conflicts module
          - [Test::Kwalitee] now included in bundle, rather than adding it
            into the minted dist.ini separately

0.018     2013-08-16 05:11:06Z (Karen Etheridge)
          - now using [PromptIfStale] to ensure the plugin bundle is always
            the latest version, and all plugins are checked at release time
          - bring back [Test::CPAN::Changes], now that the spec has become a
            bit more reasonable (removed since v0.015)
          - Changes entries are now made with times in UTC, with a trailing
            'Z' rather than the CLDR 'ZZZZ' format code

0.017     2013-08-04 09:12:17 PDT-0700 (Karen Etheridge)
          - update minimum version of perl required, re syntax used in
            templates applied during minting
          - inject a forced dependency on a fixed CPAN::Meta::Check
          - skip pluginbundle tests if .git dir is not present (too many
            plugins rely on git data)

0.016     2013-08-03 12:44:15 PDT-0700 (Karen Etheridge)
          - added basic tests for the pluginbundle and minter
          - clean up .ackrc editing at build time

0.015     2013-08-01 16:02:32 PDT-0700 (Karen Etheridge)