@@ -96,6 +96,11 @@ Dist::Zilla::Plugin::ModuleBuildTiny = 0.004
 Dist::Zilla::Plugin::GithubMeta = 0
 Dist::Zilla::Plugin::GitHub::Update = 0
 
+[Prereqs / PluginBundle (direct, testing)]
+-phase = test
+-relationship = requires
+Test::Warnings = 0
+
 [Prereqs / MintingProfile]
 ; TODO: these should be added
 ; automatically by Dist::Zilla::Role::MintingProfile::ShareDir
