@@ -10,3 +10,6 @@ license             = {{ $dist->_license_class }}
 
 [@Author::ETHER]
 :version = {{ use Dist::Zilla::PluginBundle::Author::ETHER; Dist::Zilla::PluginBundle::Author::ETHER->VERSION }}
+
+[Prereqs / TestRequires]
+Test::Warnings = 0
