@@ -9,7 +9,7 @@ BEGIN {
         unless -d '.git' or -d '../../.git' or -d '../../../.git';
 }
 
-use Test::Warnings;
+use if $ENV{AUTHOR_TESTING} || $ENV{AUTOMATED_TESTING}, 'Test::Warnings';
 use Test::Deep;
 use Test::Deep qw(cmp_details deep_diag);
 use Test::DZil;
